--- a/.github/workflows/.ruff.toml
+++ b/.github/workflows/.ruff.toml
@@ -1,6 +1,10 @@
 [tool.ruff]
 select = [
-    "F", "AIR001", "E101", "E201", "E202", "E203",
+    "F401", "F402", "F403", "F406", "F407", "F501", "F502", "F503", "F504",
+    "F505", "F506", "F507", "F508", "F509", "F521", "F522", "F523", "F524",
+    "F525", "F541", "F601", "F602", "F621", "F622", "F623", "F632", "F633",
+    "F634", "F701", "F702", "F704", "F706", "F707", "F722", "F811", "F821",
+    "F823", "F841", "F842", "F901", "AIR001", "E101", "E201", "E202", "E203",
     "E204", "E401", "E402", "E501", "E701", "E702", "E703", "E711", "E712",
     "E713", "E714", "E721", "E722", "E731", "E741", "E742", "E743", "E902",
     "W191", "W291", "W292", "W293", "W391", "W505", "W605", "C901", "I001",
