--- a/.github/workflows/.ruff.toml
+++ b/.github/workflows/.ruff.toml
@@ -1,13 +1,20 @@
-[lint]
+[tool.ruff.lint]
 select = [
-    "F", "AIR001", "E101", "E201", "E202", "E203",
-    "E204", "E401", "E402", "E701", "E702", "E703", "E711", "E712",
-    "E713", "E714", "E721", "E722", "E731", "E741", "E742", "E743", "E902",
-    "W191", "W291", "W292", "W293", "W391", "W505", "W605", "C901", "I001",
-    "I002", "PD002", "PD003", "PD004", "PD015", "PD901", "N802", "N803",
-    "N806", "N807", "N818", "N999", "UP032", "UP034", "ANN001", "ANN201",
-    "ANN202", "S105", "S110", "S112", "A001", "B025", "ICN", "Q", "PLR2004"
+    "F", 
+    "E", 
+    "W", 
+    "C",
+    "AIR",                                          
+    "ICN",                                          
+    "Q",                                            
+    "I001", "I002",                                 
+    "PD002", "PD003", "PD004", "PD015", "PD901",    
+    "N802", "N803", "N806", "N807", "N818", "N999",  
+    "UP032", "UP034",                               
+    "ANN001", "ANN201", "ANN202",                   
+    "S105", "S110", "S112",                         
+    "A001",                                        
+    "B025",                                         
+    "PLR2004"                                       
 ]
-
-# Enable preview mode to allow the selection of experimental features
-preview = true
+ignore = ["E501"]
